fixed header spacing issue

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -44,7 +44,6 @@ ul {
   width: 100%;
   height: 5rem;
   padding: 2rem;
-  margin-bottom: 4rem;
   z-index: 1;
 
   &__title {
@@ -173,7 +172,7 @@ ul {
   position: relative;
   width: 80%;
   padding: 4rem 0;
-  margin: auto;
+  margin: 4rem auto;
 
   &__header {
     padding: 1rem 0;
